<resources>
    <string name="app_name">JHottLeitsch_NoAssemblyRequired</string>
    <string name="deck1">Framing Hammer</string>
    <string name="deck2">Plumb Bob</string>
    <string name="deck3">Cement Hoe</string>
    <string name="deck4">Trowel</string>
    <string name="deck5">Torpedo Level</string>
    <string name="deck6">4 ft Level</string>
    <string name="deck7">Socket Wrench and Set</string>
    <string name="deck8">Adjustable Crescent Wrench</string>
    <string name="deck9">Assorted Screwdrivers</string>
    <string name="deck10">Shovel</string>
    <string name="deck11">Wheelbarrow</string>
    <string name="deck12">Nail Pouch</string>
    <string name="deck13">Pencil</string>
    <string name="deck14">Pry Bar</string>
    <string name="deck15">Caulk Gun and Caulk</string>
    <string name="deck16">Framing Square</string>
    <string name="deck17">Combination Square</string>
    <string name="deck18">Tape Measure</string>
    <string name="deck19">Handsaw</string>
    <string name="deck20">Sawhorses</string>
    <string name="deck21">Safety Goggles</string>
    <string name="deck22">Ear Plugs</string>
    <string name="deck23">Extension Cords</string>
    <string name="deck24">Power Saw</string>
    <string name="deck25">Jigsaw</string>
    <string name="deck26">Miter Saw</string>
    <string name="deck27">Drill and Bits</string>
    <string name="ikea1">Hammer with separate rubber face</string>
    <string name="ikea2">Adjustable Wrench</string>
    <string name="ikea3">Combination Pliers</string>
    <string name="ikea4">Bit Screwdriver</string>
    <string name="ikea5">Bits for slotted, cross-head and hex screws</string>
    <string name="ikea6">Awl</string>
    <string name="bike1">Box Cutter</string>
    <string name="bike2">Hex Wrench Set</string>
    <string name="bike3">Pedal Wrench</string>
    <string name="bike4">Cable Cutters</string>
    <string name="bike5">Bike Grease</string>
    <string name="bike6">Bike Stand</string>
    <string name="bike7">Philips Head Screwdriver</string>
    <string name="txtTitle">No Assembly Required</string>
    <string name="description1">Tools</string>
    <string name="description2">Bike</string>
    <string name="description3">Dresser</string>
    <string name="description4">Wood Patio</string>
    <string name="txtBike">Tools for Bike</string>
    <string name="txtDresser">Tools for Dresser</string>
    <string name="txtPatio">Tools for Patio</string>
    <string name="btnBike">View Bike Tools</string>
    <string name="btnDresser">View Dresser Tools</string>
    <string name="btnPatio">Tools for Patio</string>
</resources>
